--- a/Overlay.html
+++ b/Overlay.html
@@ -33,7 +33,7 @@
 </template>
 
 <template name="progress">
-  <progress id="progress-bar"  value="0" max="100" />
+  <progress id="progress-bar"  value="{{progress}}" max="100" />
 </template>
 
 <template name="tools">
@@ -44,6 +44,7 @@
   <a class="btn span2" href="/map/"><i class="icon-pushpin"></i> Map</a>
   <a class="btn span2" href="#"><i class="icon-signal"></i> Visualize</a>
   <a class="btn span2" href="#"><i class="icon-group"></i> Team</a>
+  <a class="btn span2" href="/queue"><i class="icon-truck"></i> Job Queue</a>
   <a class="btn span2" href="#"><i class="icon-download"></i> Export</a>
 </template>
 
@@ -94,4 +95,16 @@
 
 <template name="map">
 <h3>Map</h3>
+</template>
+
+<template name="queue">
+  <h3>Job Queue</h3>
+  <table class="table">
+    <thead><th>Job #</th><th>File</th><th>Submit time</th><th>Processor</th><th>Status</th></thead>
+    <tbody>
+    {{#each queuedItems}}
+      <tr><td>#{{number}}</td><td>{{file}}</td><td>{{fromNow submitTime}}</td><td>{{processor}}</td><td>{{status}}</td></tr>
+    {{/each}}
+  </tbody>
+  </table>
 </template>
