--- a/Overlay.html
+++ b/Overlay.html
@@ -2,28 +2,24 @@
   <title>Overlay</title>
 </head>
 
-<body>
+<template name="layout">
   <div class="container">
     <div class="row" id="header">
       <div><h1>Overlay</h1></div>
       <div><h2>media and metadata search</h2></div>
       <div id="searchbox"><i class="icon-search"></i>{{> searchbox}}</div>
       <div id="progress">{{> progress}}</div>
-      <div>{{loginButtons align="left"}}</div>
+      <div>{{! loginButtons align="left"}}</div>
     </div>
     <div class="row" id="main-content">
       <div class="span3">
         {{> tools}}
       </div>
       <div class="span9">
-        {{> current_view}}
+        {{> yield}}
       </div>
     </div>
   </div>
-</body>
-
-<template name="current_view">
-  {{{content}}}
 </template>
 
 <template name="searchbox">
@@ -32,7 +28,7 @@
 </template>
 
 <template name="progress">
-  <progress id="progress-bar"  value="{{progress}}" max="100" />
+  <progress id="progress-bar"  value="{{progress}}" max="100"></progress>
 </template>
 
 <template name="tools">
@@ -52,24 +48,40 @@
 <p>{{ numFound }} results</p>
 {{#each doc}}
   <div class="thumbnail">
-    <img src="thumbnails/{{md5}}.jpg" alt="{{file}}"/>
-    <div class="modal hide" role="dialog" aria-labelledby="{{ss_md5}}">
-      <div class="modal-header">
-        <h3>{{thumbnail}}</h3>
-        <a href="{{file}}" class="btn"><i class="icon-download"></i> Download</a>
-      </div>
-      <div class="modal-body">
-        <ul>
-        {{#each arrayify this}}
-          <li><strong>{{name}}:</strong> {{value}}</li>
-        {{/each}}
-        </ul>
-      </div>
-      <div class="modal-footer">
+    <img src="thumbnails/{{thumbnail}}" alt="{{filename}}"/>
+  </div>
+{{/each}}
+</template>
+
+<template name="file_dialog">
+  <div id="fileModal" class="modal fade" role="dialog" aria-labelledby="{{ss_md5}}">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>{{filename}}</h3>
+          {{#if endsWith filenameOnDisk '.mp4'}}
+            <video width="100%" autoplay="true"  src="uploads/{{filenameOnDisk}}"></video>
+          {{/if}}
+          {{#if endsWith filenameOnDisk '.jpg' '.png'}}
+            <img width="100%" src="uploads/{{filenameOnDisk}}">
+          {{/if}}
+          {{#if endsWith filenameOnDisk '.mp3' '.ogg'}}
+            <audio width="100%" src="uploads/{{filenameOnDisk}}"></audio>
+          {{/if}}
+          <a href="uploads/{{filenameOnDisk}}" target="_blank" class="btn"><i class="icon-download"></i> Download</a>
+        </div>
+        <div class="modal-body">
+          <ul>
+          {{#each arrayify this}}
+            <li><strong>{{name}}:</strong> {{value}}</li>
+          {{/each}}
+          </ul>
+        </div>
+        <div class="modal-footer">
+        </div>
       </div>
     </div>
   </div>
-{{/each}}
 </template>
 
 <template name="map">
@@ -87,3 +99,4 @@
   </tbody>
   </table>
 </template>
+
